--- a/index.html
+++ b/index.html
@@ -7,21 +7,18 @@
   <link rel="shortcut icon" href="favicon.ico">  
 </head>
 <body>
-  <section>
   <div class="container">
- <div class="header"> 
-  <h1 class="logo">Cat Gallery</h1></div>
-<div class="gallery">
-  <div class="item">
-    <div id="grid" class="row cat-grid">
-      <!-- Images will be added dynamically here -->
-    </div></div>
-  </div>
-    <div id="pagination" class="pagination-container">
-      <!-- Pagination links will be added dynamically here -->
-    </div>
-</div>
-  </section>
+
+            <div
+                id="grid" class="row"><!-- Images will be added dynamically here -->
+            </div>
+
+            <div
+                id="pagination" class="pagination-container"><!-- Pagination links will be added dynamically here -->
+
+
+            </div>
+        </div>
     <script src="script.js"></script>
 </body>
 </html>
